commiting to see heroku

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,18 +1,25 @@
 <h1>Personal Project</h1>
 
 
-<h2>Email Please</h2>
-
+<h2>Please Register</h2>
+<body background ="">
 
 <form method="post" action="/emails">
   <ul>
 
-    <li>
-      <label for="email">Email</label>
+      <label for="username">Username</label><br>
+      <input id="input" type="text" name="username"/>
+      <br>
+        <label for="password">Password</label><br>
+        <input type="password" name="password"/>
+      <br>
+      <label for="email">Email</label><br>
       <input type="text" id="email" name="email"/>
-    </li>
+    <br>
 
-    <input type="submit" value="SUBMIT" />
+
+    <input type="submit" value="SUBMIT"/>
     </li>
   </ul>
 </form>
+</body>
