--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,87 @@
-/*body {background-color: royalblue;*/
+
+/*
+STYLE.CSS:
+One stylesheet to rule them all.
+
+selector { property:value }
+
+*/
+
+/* ----- =structure ----- */
+
+body {
+    background-color: white;
+}
+
+header {
+    background-color: #c5c5c5; /* Dark Grey */
+}
+
+header img {
+    width: 300px;
+    height: 100px;
+}
+
+nav {
+    background-color: #f4f4f4; /* Light Grey */
+}
+
+article {
+    position: relative;
+    margin-left: 0px;
+    margin-bottom: 16px;
+    float: left;
+}
+#content {*/background-color: #fff; /* White */
+}
+
+footer { background-color: #c5c5c5; /* Dark Grey */}
+
+.wrapper {
+    margin: auto;
+    width: 980px;
+}
+
+/* ----- =columns ----- */
+
+.one_half {
+    width: 460px;
+}
+
+.one_third {
+    width: 300px;
+}
+
+.two_third {
+    width: 620px;
+}
+
+.one_fourth {
+    width: 220px;
+}
+
+.three_fourth {
+    width: 700px;
+}
+
+.full_column {
+    width: 940px;
+}
+
+
+
+/* clearfix */
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+/* * For IE 6/7 only * Include this rule to trigger hasLayout and contain floats. */
+.clearfix {
+    *zoom: 1;
+}
