added some review helps to mess around with

--- a/views/home.erb
+++ b/views/home.erb
@@ -23,4 +23,14 @@
     </li>
   </ul>
 </form>
+<ul class="star-rating">
+
+  <li><a title="Rate this 1 star out of 5" href="#">1</a></li>
+  <li><a title="Rate this 2 stars out of 5" href="#">2</a></li>
+  <li><a title="Rate this 3 stars out of 5" href="#">3</a></li>
+  <li><a title="Rate this 4 stars out of 5" href="#">4</a></li>
+  <li><a title="Rate this 5 stars out of 5" href="#">5</a></li>
+  <span style="color:#ffaa00;font-size:140%;">★</span>
+
+  <span style="color:#ffaa00;font-size:140%;">☆</span>
 </body>
